package backend.world.Movement.ObjectSpeedStrategy;

public interface ObjectSpeedStrategy {
    public int getFallingObjectSpeed();
}
