package backend.world.Movement.ObjectSpeedStrategy;

public class ObjectSpeedlvl2Strategy implements ObjectSpeedStrategy {

    @Override
    public int getFallingObjectSpeed() {
        return 3;
    }

}
