package backend.world.Movement.ObjectSpeedStrategy;

public class SpeedFinalSecondsStrategy implements ObjectSpeedStrategy{

    @Override
    public int getFallingObjectSpeed() {
        return 5;
    }

}
