package backend.world;
import java.util.ArrayList;
import eg.edu.alexu.csd.oop.game.GameObject;

public interface ObjectsFallingStrategy {
    
    public ArrayList<GameObject> generateObjectsFalling(int n);   

    
}
