@startuml DifficultyStrategy

class Difficulty{
    -speedStrategy : ObjectSpeedStrategy
    -objectsFallingStrategy : ObjectsFallingStrategy
    -movementStrategy : Movement
    -numFallingPerSec : int

    +Difficulty(speed : ObjectSpeedStrategy,objFalling : ObjectsFallingStrategy,movement : Movement,numFallingPerSec : int)
                    /'movement sent with movementD and movementP'/
                    /'Speed made in construcotr'/
    +Difficulty(PredefinedDifficultyStrategy pDiff)
}


class Movement{
    -moveDirectionStrategy : MoveDirectionStrategy
    -movePatternStrategy : MovePatternStrategy
    -gameSpeed : ObjectSpeedStrategy
    +MovementStrategy(moveP : MovePatternStrategy, moveD : MoveDirectionStrategy,gameSpeed : SpeedStrategy)
    +MovementStrategy(moveP : MovePatternStrategy, moveD : MoveDirectionStrategy) 
    /'second constructor to make a movement without speed aka difault speed?'/

    +move(o : FallingObject,gameSpeed : SpeedStrategy) : void
}

interface PredefinedDifficultyStrategy {
    +setDifficulty(Difficulty diff) : void
}

interface ObjectSpeedStrategy {
    +getFallingObjectSpeed() : int
}

interface ObjectsFallingStrategy {
    +getObjectsFalling() : ArrayList<FallingObjects>  
}

class EasyDifficultyStrategy {

}

class MediumDifficultyStrategy {
    
}

class HardDifficultyStrategy {
    
}

class CrazyDifficultyStrategy {
    
}
class SpeedFinalSecondsStrategy{

}


class ObjectSpeedlvl1Strategy{

}

class ObjectSpeedlvl2Strategy{
    
}

class ObjectSpeedlvl3Strategy{
    
}

class PlatesOnlyStrategy {

}

class BombsStrategy {

}

class HeartsStrategy {

}

class BombsAndHeartsStrategy {

}

Difficulty o- Movement
Difficulty o-- ObjectSpeedStrategy
Difficulty o-- ObjectsFallingStrategy
Difficulty o-- PredefinedDifficultyStrategy


PredefinedDifficultyStrategy <|.. EasyDifficultyStrategy
PredefinedDifficultyStrategy <|.. MediumDifficultyStrategy
PredefinedDifficultyStrategy <|.. HardDifficultyStrategy
PredefinedDifficultyStrategy <|.. CrazyDifficultyStrategy


ObjectSpeedStrategy <|.. ObjectSpeedlvl1Strategy 
ObjectSpeedStrategy <|.. ObjectSpeedlvl2Strategy 
ObjectSpeedStrategy <|.. ObjectSpeedlvl3Strategy
ObjectSpeedStrategy <|.. SpeedFinalSecondsStrategy

ObjectsFallingStrategy <|.. PlatesOnlyStrategy
ObjectsFallingStrategy <|.. BombsStrategy
ObjectsFallingStrategy <|.. HeartsStrategy
ObjectsFallingStrategy <|.. EverythingSoFarStrategy
ObjectsFallingStrategy <|.. BombsAndHeartsStrategy

@enduml